Prevented the page from jumping when the scroll bar appears

--- a/src/sass/_large.scss
+++ b/src/sass/_large.scss
@@ -1,10 +1,6 @@
 @use 'colors';
 
 @media screen and (min-width: 1024px) {
-	body {
-		overflow-x: hidden;
-	}
-
 	.homepage {
 		&__title {
 			font-size: 7em;
