--- a/src/sass/_style.scss
+++ b/src/sass/_style.scss
@@ -12,7 +12,7 @@
 
 body {
 	background-image: url('../images/background-welcome.jpg');
-	background-size: cover;
+	background-size: center;
 	background-position: center;
 	background-attachment: fixed;
 	font-family: 'Montserrat', sans-serif;
